tests/models/struct/unnamed/u64/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    u64
);
fn main() {}
