tests/models/struct/unnamed/u64/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    u64
);
fn main() {}
